Adicionando criação de designação de partes dos estudantes

--- a/DesignacoesReuniao.Console/DesignacoesReuniao.Console.csproj
+++ b/DesignacoesReuniao.Console/DesignacoesReuniao.Console.csproj
@@ -25,6 +25,9 @@
     <None Update="S-140_T.docx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="S-89-T.pdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
