--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "master" ]
 
 env:
-  PROJECT_LOCATION: dotnet-mvc/dotnet-mvc.csproj
+  PROJECT_LOCATION: DesignacoesReuniao/DesignacoesReuniao.Web.csproj
   ELASTIC_BEANSTALK_NAME: DesignacoesReuniao
   ELASTIC_BEANSTALK_ENV_NAME: DesignacoesReuniao-env
 
