--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -45,6 +45,12 @@ jobs:
     - uses: actions/download-artifact@v4.1.7
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v4
+      env:
+          AWS_DEFAULT_REGION:
+          AWS_REGION:
+          AWS_ACCESS_KEY_ID:
+          AWS_SECRET_ACCESS_KEY:
+          AWS_SESSION_TOKEN:
       with:
         aws-region: sa-east-1
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
