--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -45,16 +45,11 @@ jobs:
     - uses: actions/download-artifact@v4.1.7
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v4
-      env:
-          AWS_DEFAULT_REGION:
-          AWS_REGION:
-          AWS_ACCESS_KEY_ID:
-          AWS_SECRET_ACCESS_KEY:
-          AWS_SESSION_TOKEN:
       with:
         aws-region: sa-east-1
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        assume_role: github-actions
     - name: Deploy
       run: |
         aws s3 cp "deploy-files/${{github.run_id}}.zip" s3://elasticbeanstalk-sa-east-1-${{ secrets.AWS_ACCOUNT_ID }}/artifact/dotnet-mvc-app/
