--- a/.ebextensions/user-data.config
+++ b/.ebextensions/user-data.config
@@ -1,31 +1,34 @@
 packages:
   yum:
-    google-chrome-stable:  # Instala o Chrome
-    xorg-x11-server-Xorg:   # Dependências necessárias para rodar o Chrome
-    xorg-x11-xauth:         # Dependências necessárias para rodar o Chrome
-    xorg-x11-utils:         # Dependências necessárias para rodar o Chrome
-    gtk3:                   # Dependências para o WebDriver
-
+    xorg-x11-server-Xorg: null
+    xorg-x11-xauth: null
+    xorg-x11-utils: null
+    gtk3: null
 files:
-  "/etc/yum.repos.d/google-chrome.repo":
-  mode: "000644"
-  owner: root
-  group: root
-  content: |
-  [google-chrome]
-  name=google-chrome
-  baseurl=https://dl.google.com/linux/chrome/rpm/stable/x86_64
-  gpgcheck=1
-  gpgkey=https://dl.google.com/linux/linux_signing_key.pub
-  enabled=1
-
+  /etc/yum.repos.d/google-chrome.repo:
+    mode: "000644"
+    owner: root
+    group: root
+    content: |
+      [google-chrome]
+      name=google-chrome
+      baseurl=https://dl.google.com/linux/chrome/rpm/stable/x86_64
+      gpgcheck=1
+      gpgkey=https://dl.google.com/linux/linux_signing_key.pub
+      enabled=1
 commands:
   01_install_chrome:
-    command: "yum install -y google-chrome-stable"
+    command: yum install -y google-chrome-stable
+  02_install_chromedriver:
+    command: >
+      curl -O https://chromedriver.storage.googleapis.com/$(curl -s
+      https://chromedriver.storage.googleapis.com/LATEST_RELEASE)/chromedriver_linux64.zip
+      && \
 
-02_install_chromedriver:
-  command: "curl -O https://chromedriver.storage.googleapis.com/$(curl -s https://chromedriver.storage.googleapis.com/LATEST_RELEASE)/chromedriver_linux64.zip && \
-            unzip chromedriver_linux64.zip && \
-            mv chromedriver /usr/bin/ && \
-            chmod +x /usr/bin/chromedriver && \
-            rm chromedriver_linux64.zip"
+      unzip chromedriver_linux64.zip && \
+
+      mv chromedriver /usr/bin/ && \
+
+      chmod +x /usr/bin/chromedriver && \
+
+      rm chromedriver_linux64.zip
