--- a/.ebextensions/user-data.config
+++ b/.ebextensions/user-data.config
@@ -1,34 +1,16 @@
-packages:
-  yum:
-    xorg-x11-server-Xorg: null
-    xorg-x11-xauth: null
-    xorg-x11-utils: null
-    gtk3: null
 files:
-  /etc/yum.repos.d/google-chrome.repo:
-    mode: "000644"
+  "/opt/elasticbeanstalk/hooks/appdeploy/pre/01_userdata.sh":
+    mode: "000755"
     owner: root
     group: root
     content: |
-      [google-chrome]
-      name=google-chrome
-      baseurl=https://dl.google.com/linux/chrome/rpm/stable/x86_64
-      gpgcheck=1
-      gpgkey=https://dl.google.com/linux/linux_signing_key.pub
-      enabled=1
-commands:
-  01_install_chrome:
-    command: yum install -y google-chrome-stable
-  02_install_chromedriver:
-    command: >
-      curl -O https://chromedriver.storage.googleapis.com/$(curl -s
-      https://chromedriver.storage.googleapis.com/LATEST_RELEASE)/chromedriver_linux64.zip
-      && \
-
-      unzip chromedriver_linux64.zip && \
-
-      mv chromedriver /usr/bin/ && \
-
-      chmod +x /usr/bin/chromedriver && \
-
-      rm chromedriver_linux64.zip
+      #!/bin/bash
+      echo "Executando User Data..."
+      cd /tmp/
+      sudo wget https://chromedriver.storage.googleapis.com/80.0.3987.106/chromedriver_linux64.zip
+      sudo unzip chromedriver_linux64.zip
+      sudo mv chromedriver /usr/bin/chromedriver
+      chromedriver --version
+      sudo curl https://intoli.com/install-google-chrome.sh | bash
+      sudo mv /usr/bin/google-chrome-stable /usr/bin/google-chrome
+      google-chrome --version && which google-chrome
