--- a/DesignacoesReuniao.Web/DesignacoesReuniao.Web.csproj
+++ b/DesignacoesReuniao.Web/DesignacoesReuniao.Web.csproj
@@ -20,7 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="2025\" />
+    <Folder Include="PartesEstudantes\2024\12\" />
+    <Folder Include="ReunioesPreenchidas\2024\12\" />
   </ItemGroup>
 
 </Project>
