--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
       dotnet: 8.0
   build:
     commands:
-      - dotnet publish "DesignacoesReuniao.Web.csproj" -c Release -o /app/publish
+      - dotnet publish DesignacoesReuniao.Web/DesignacoesReuniao.Web.csproj -c Release -o ./publish
 artifacts:
   files:
     - ./publish/**
