--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,7 @@ phases:
     commands:
       - dotnet publish DesignacoesReuniao.Web/DesignacoesReuniao.Web.csproj -c Release -o ./publish
       - ls ./publish
+      - rm -rf ./DesignacoesReuniao.Web # Remove o diretório conflitante
       - cp -r ./publish/* .
 artifacts:
   files:
