--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,8 +6,9 @@ phases:
   build:
     commands:
       - dotnet publish DesignacoesReuniao.Web/DesignacoesReuniao.Web.csproj -c Release -o ./publish
-      - ls ./publish
+      - echo "Arquivos na pasta publish:"
+      - ls -la ./publish
 artifacts:
   files:
-    - publish/**  # Inclui todos os arquivos e subdiretórios
-  base-directory: publish  # Define 'publish' como o diretório base
+    - '**/*' # Coleta arquivos no diretório base
+  base-directory: publish
